<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DonationCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/content_padding">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/circleImage"
                style="@style/ProfileImage"
                android:contentDescription="@string/image_description"
                android:src="@drawable/user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/users"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_start"
                android:text="@string/default_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/circleImage"
                app:layout_constraintTop_toTopOf="@id/circleImage" />

            <TextView
                android:id="@+id/description"
                style="@style/TextDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_marginTop="@dimen/text_margin_top"
                android:text="@string/default_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/circleImage"
                app:layout_constraintTop_toBottomOf="@id/users" />

            <TextView
                android:id="@+id/donation_date"
                style="@style/TextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top"
                android:text="@string/date_format"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/circleImage"
                app:layout_constraintTop_toBottomOf="@id/description"
                tools:text="Date : 25/12/2024" />

            <Button
                android:id="@+id/confirm_button"
                style="@style/Button.Confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="@dimen/button_margin"
                android:text="@string/button_confirm"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                app:layout_constraintStart_toStartOf="@id/circleImage"
                app:layout_constraintTop_toBottomOf="@id/donation_date" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Button.Cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginTop="60dp"
                android:text="@string/button_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/confirm_button"
                app:layout_constraintTop_toBottomOf="@id/donation_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>